2013-10-27 Roy Hills <Roy.Hills@nta-monitor.com>

	* ike-scan.c, ike-scan.h, isakmp.c: Use payload type 43 instead of
	  13 for vendor ID payloads with ikev2. This implementation requires
	  that the --ikev2 or -2 option be specified before the --vendor or -e
	  option to work correctly.

	* isakmp.c: Updated maps from RFC 5996 (new IKEv2 RFC which replaces
	  4306), RFC 5282, RFC 5114, and RFC 6467.

	* ike-vendor-ids, check-deocde: Minor change to Firewall-1 NGX vendor
	  id name.

2013-10-26 Roy Hills <Roy.Hills@nta-monitor.com>

	* ike-scan.c: Add support for sending key exchange payload for ECP
	  Diffie-Hellman groups 19, 20 and 21 with --dhgroup=n. The Key
	  Exchange payload length for these groups is as detailed in RFC 4753.
	  DH groups 19 and 20 tested in aggressive mode with Checkpoint VPN-1
	  R77.

2013-09-04 Roy Hills <Roy.Hills@nta-monitor.com>

	* Added references to the github repository in README, *.c and *.h
	  in place of the ike-scan email address and the pattern submission
	  URL.

	* configure.ac: Change the bug-report string in AC_INIT from the
	  ike-scan email address to the github URL.

2013-08-17 Roy Hills <Roy.Hills@nta-monitor.com>

	* check-vendor-ids, Makefile.am: New check script to validate the
	  vendor ID patterns as part of "make check" from Jonathan Claudius.

2013-08-16 Roy Hills <Roy.Hills@nta-monitor.com>

	* .travis.yaml: New file to enable autobuild on Travis CI.

	* .gitignore: New file listing patterns to exclude from the repository.

	* COPYING: New file.

	* check-decode: Modified so "make check" works with new
	  HeartBeat_Notify VID name.

	* configure.ac: Incremented version to 1.9.4 to distinguish new
	  version under git revision control.

	* ike-vendor-ids: Merged in vendor ID additions from Jonathan Claudius.

	* Removed $Id$ keywords from all files, and associated rcsid variable
	  from C sources.

2013-08-15 Roy Hills <Roy.Hills@nta-monitor.com>

        * Final SVN revision before migration to git.
